--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -286,7 +286,7 @@
                                     <div class="card-body txt-alg-jf">
                                             <h5>25 Июня</h5>
                                             <p>
-                                                <strong>22:00</strong>
+                                                <strong><span class="fa fa-clock-o"></span> 22:00</strong>
                                                 Выезд из Центра Запорожья после минутки позитива.
                                                 <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                                 Едем на комфортабельном транспорте тур.класса (раскладные сидения), 
@@ -299,7 +299,7 @@
                                          <hr>
                                              <h5>26 Июня</h5>
                                             <p>
-                                                <strong>10:30 - 12:00</strong> 
+                                                <strong><span class="fa fa-clock-o"></span> 10:30 - 12:00</strong> 
                                                  Солняные Шахты Соледара. Вот это круто! 
                                                  <img src="/images/Emoji/1f632.png" alt="smile" height="20px">
                                                  Милые Соляные скульптуры подсвеченные разными огоньками. 
@@ -309,19 +309,19 @@
                                                  Перекус в дороге бутербродиком из дома, пока нет времени на кафе. 
                                             </p>
                                             <p>
-                                                <strong>14:00 - 16:30</strong> 
+                                                <strong><span class="fa fa-clock-o"></span> 14:00 - 16:30</strong> 
                                                 Ураа! Дегустация, мы попробуем 5 видов игристых вин! 
                                                 Будет вкусненько, а еще мы побываем на супер экскурсии и узнаем все секреты 
                                                 приготовления настоящего шампанскогo. Посещение строго от 18 лет.
                                             </p>    
                                             <p>
-                                                <strong>17:30 - 18:00</strong> 
+                                                <strong><span class="fa fa-clock-o"></span> 17:30 - 18:00</strong> 
                                                 Ужин в одном из интереснейших кафе. 
                                                 Комплексное меню мы предложим заранее, остальные блюда сможете заказать на месте.
                                                 <!--<img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                             </p>       
                                             <p>
-                                                <strong>18:40 - 19:00</strong> 
+                                                <strong><span class="fa fa-clock-o"></span> 18:40 - 19:00</strong> 
                                                 Заселение в гостиницу. Номера стандарт 2-3 местные,
                                                 удобства в номере. 
                                                 <i>Если вас двое, селим в 2-х местный.</i>
@@ -393,13 +393,13 @@
                                             <hr>
                                            <h5>27 Июня</h5>
                                             <p>
-                                                <strong>09:00 - 09:30</strong>
+                                                <strong><span class="fa fa-clock-o"></span> 09:00 - 09:30</strong>
                                                 Завтрак самостоятельно или заказ в гостинице.
                                                <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
 
                                             </p>
                                             <p>
-                                                <strong>10:00</strong>
+                                                <strong><span class="fa fa-clock-o"></span> 10:00</strong>
                                                 Выселяемся из гостиницы чтоб отправиться на экскурсию по монастырю! 
                                                 Кто опоздает, назначается фотографом и делает всем по фотке
                                                 в супер-ракурсе или поет зажигательную песню, чтоб всем взбодриться. 
@@ -407,7 +407,7 @@
 
                                             </p>
                                             <p>
-                                                <strong>10:30 - 12:30</strong>
+                                                <strong><span class="fa fa-clock-o"></span> 10:30 - 12:30</strong>
                                                 Экскурсия по территории Святогорского монастыря
                                                 с посещением удивительных скальных монастырей. 
                                                 Места тут, дух захватывает! 
@@ -416,7 +416,7 @@
                                                 <img src="/images/Emoji/1f604.png" alt="smile" height="20px">
                                             </p>
                                             <p>
-                                                <strong>12:30 - 13:00</strong>
+                                                <strong><span class="fa fa-clock-o"></span> 12:30 - 13:00</strong>
                                                 Обедаем в настоящей трапезной для паломников, 
                                                 причем абсолютно бесплатно! 
                                                 Чтоб не заслужить общий 
@@ -426,7 +426,7 @@
                                                 <img src="/images/Emoji/1f600.png" alt="smile" height="20px">
                                             </p>
                                             <p>
-                                                <strong>23:00</strong>
+                                                <strong><span class="fa fa-clock-o"></span> 23:00</strong>
                                                 Ориентировочное время прибытия. 
                                                 Почему так, зависит от длительности стоянок, 
                                                 иногда сложно всем собраться после хорошего отдыха и дороги. 
