--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -286,7 +286,14 @@
                                     <div class="card-body txt-alg-jf">
                                             <h5>25 Июня</h5>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 22:00</strong>
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    22:00</strong>
+                                                
                                                 Выезд из Центра Запорожья после минутки позитива.
                                                 <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                                 Едем на комфортабельном транспорте тур.класса (раскладные сидения), 
