--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -306,7 +306,13 @@
                                          <hr>
                                              <h5>26 Июня</h5>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 10:30 - 12:00</strong> 
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    10:30 - 12:00</strong> 
                                                  Солняные Шахты Соледара. Вот это круто! 
                                                  <img src="/images/Emoji/1f632.png" alt="smile" height="20px">
                                                  Милые Соляные скульптуры подсвеченные разными огоньками. 
