--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -322,19 +322,37 @@
                                                  Перекус в дороге бутербродиком из дома, пока нет времени на кафе. 
                                             </p>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 14:00 - 16:30</strong> 
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    14:00 - 16:30</strong> 
                                                 Ураа! Дегустация, мы попробуем 5 видов игристых вин! 
                                                 Будет вкусненько, а еще мы побываем на супер экскурсии и узнаем все секреты 
                                                 приготовления настоящего шампанскогo. Посещение строго от 18 лет.
                                             </p>    
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 17:30 - 18:00</strong> 
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    17:30 - 18:00</strong> 
                                                 Ужин в одном из интереснейших кафе. 
                                                 Комплексное меню мы предложим заранее, остальные блюда сможете заказать на месте.
                                                 <!--<img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                             </p>       
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 18:40 - 19:00</strong> 
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    18:40 - 19:00</strong> 
                                                 Заселение в гостиницу. Номера стандарт 2-3 местные,
                                                 удобства в номере. 
                                                 <i>Если вас двое, селим в 2-х местный.</i>
@@ -406,13 +424,25 @@
                                             <hr>
                                            <h5>27 Июня</h5>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 09:00 - 09:30</strong>
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    09:00 - 09:30</strong>
                                                 Завтрак самостоятельно или заказ в гостинице.
                                                <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
 
                                             </p>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 10:00</strong>
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    10:00</strong>
                                                 Выселяемся из гостиницы чтоб отправиться на экскурсию по монастырю! 
                                                 Кто опоздает, назначается фотографом и делает всем по фотке
                                                 в супер-ракурсе или поет зажигательную песню, чтоб всем взбодриться. 
@@ -420,7 +450,13 @@
 
                                             </p>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 10:30 - 12:30</strong>
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    10:30 - 12:30</strong>
                                                 Экскурсия по территории Святогорского монастыря
                                                 с посещением удивительных скальных монастырей. 
                                                 Места тут, дух захватывает! 
@@ -429,7 +465,13 @@
                                                 <img src="/images/Emoji/1f604.png" alt="smile" height="20px">
                                             </p>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 12:30 - 13:00</strong>
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    12:30 - 13:00</strong>
                                                 Обедаем в настоящей трапезной для паломников, 
                                                 причем абсолютно бесплатно! 
                                                 Чтоб не заслужить общий 
@@ -439,7 +481,13 @@
                                                 <img src="/images/Emoji/1f600.png" alt="smile" height="20px">
                                             </p>
                                             <p>
-                                                <strong><span class="fa fa-clock-o"></span> 23:00</strong>
+                                                <strong>
+                                                    <ul class="listing">
+                                                        <li>
+                                                             <span class="fa fa-clock-o"></span>
+                                                        </li>
+                                                    </ul>
+                                                    23:00</strong>
                                                 Ориентировочное время прибытия. 
                                                 Почему так, зависит от длительности стоянок, 
                                                 иногда сложно всем собраться после хорошего отдыха и дороги. 
