--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -287,11 +287,9 @@
                                             <h5>25 Июня</h5>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     22:00</strong>
                                                 
                                                 Выезд из Центра Запорожья после минутки позитива.
@@ -307,11 +305,9 @@
                                              <h5>26 Июня</h5>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     10:30 - 12:00</strong> 
                                                  Солняные Шахты Соледара. Вот это круто! 
                                                  <img src="/images/Emoji/1f632.png" alt="smile" height="20px">
@@ -323,11 +319,9 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     14:00 - 16:30</strong> 
                                                 Ураа! Дегустация, мы попробуем 5 видов игристых вин! 
                                                 Будет вкусненько, а еще мы побываем на супер экскурсии и узнаем все секреты 
@@ -335,11 +329,9 @@
                                             </p>    
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     17:30 - 18:00</strong> 
                                                 Ужин в одном из интереснейших кафе. 
                                                 Комплексное меню мы предложим заранее, остальные блюда сможете заказать на месте.
@@ -347,11 +339,9 @@
                                             </p>       
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     18:40 - 19:00</strong> 
                                                 Заселение в гостиницу. Номера стандарт 2-3 местные,
                                                 удобства в номере. 
@@ -425,11 +415,9 @@
                                            <h5>27 Июня</h5>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     09:00 - 09:30</strong>
                                                 Завтрак самостоятельно или заказ в гостинице.
                                                <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
@@ -437,11 +425,9 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     10:00</strong>
                                                 Выселяемся из гостиницы чтоб отправиться на экскурсию по монастырю! 
                                                 Кто опоздает, назначается фотографом и делает всем по фотке
@@ -451,11 +437,9 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     10:30 - 12:30</strong>
                                                 Экскурсия по территории Святогорского монастыря
                                                 с посещением удивительных скальных монастырей. 
@@ -466,11 +450,9 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     12:30 - 13:00</strong>
                                                 Обедаем в настоящей трапезной для паломников, 
                                                 причем абсолютно бесплатно! 
@@ -482,11 +464,9 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <ul class="listing">
-                                                        <li>
+                                                    <span class="listing">
                                                              <span class="fa fa-clock-o"></span>
-                                                        </li>
-                                                    </ul>
+                                                    </span>
                                                     23:00</strong>
                                                 Ориентировочное время прибытия. 
                                                 Почему так, зависит от длительности стоянок, 
