--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -46,6 +46,11 @@
     <link rel="stylesheet" href="./libs/fancybox/gallery-style.css">
     <!-- //Fancybox  -->
 
+    <style>
+        .time {
+               color: #047ffc;
+            }
+    </style>
 </head>
 
 <body>
@@ -287,10 +292,9 @@
                                             <h5>25 Июня</h5>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
-                                                    22:00</strong>
+                                                   <span class="time fa fa-clock-o"></span>
+                                                    22:00
+                                                </strong>
                                                 
                                                 Выезд из Центра Запорожья после минутки позитива.
                                                 <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
@@ -305,9 +309,7 @@
                                              <h5>26 Июня</h5>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     10:30 - 12:00</strong> 
                                                  Солняные Шахты Соледара. Вот это круто! 
                                                  <img src="/images/Emoji/1f632.png" alt="smile" height="20px">
@@ -319,9 +321,7 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     14:00 - 16:30</strong> 
                                                 Ураа! Дегустация, мы попробуем 5 видов игристых вин! 
                                                 Будет вкусненько, а еще мы побываем на супер экскурсии и узнаем все секреты 
@@ -329,9 +329,7 @@
                                             </p>    
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     17:30 - 18:00</strong> 
                                                 Ужин в одном из интереснейших кафе. 
                                                 Комплексное меню мы предложим заранее, остальные блюда сможете заказать на месте.
