--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -337,9 +337,7 @@
                                             </p>       
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     18:40 - 19:00</strong> 
                                                 Заселение в гостиницу. Номера стандарт 2-3 местные,
                                                 удобства в номере. 
@@ -413,9 +411,7 @@
                                            <h5>27 Июня</h5>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     09:00 - 09:30</strong>
                                                 Завтрак самостоятельно или заказ в гостинице.
                                                <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
@@ -423,9 +419,7 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     10:00</strong>
                                                 Выселяемся из гостиницы чтоб отправиться на экскурсию по монастырю! 
                                                 Кто опоздает, назначается фотографом и делает всем по фотке
@@ -435,9 +429,7 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     10:30 - 12:30</strong>
                                                 Экскурсия по территории Святогорского монастыря
                                                 с посещением удивительных скальных монастырей. 
@@ -448,9 +440,7 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     12:30 - 13:00</strong>
                                                 Обедаем в настоящей трапезной для паломников, 
                                                 причем абсолютно бесплатно! 
@@ -462,9 +452,7 @@
                                             </p>
                                             <p>
                                                 <strong>
-                                                    <span class="listing">
-                                                             <span class="fa fa-clock-o"></span>
-                                                    </span>
+                                                    <span class="time fa fa-clock-o"></span>
                                                     23:00</strong>
                                                 Ориентировочное время прибытия. 
                                                 Почему так, зависит от длительности стоянок, 
