--- a/packages.html
+++ b/packages.html
@@ -410,7 +410,7 @@
                 <!--  //Харьков  -->
                 
                 <!--  Зоопарк Пылышенко -->
-                <div class="col-lg-3 col-sm-6 mb-5">
+                <!--<div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
                             <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
@@ -428,7 +428,7 @@
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //Зоопарк Пылышенко -->
 
                 <!--  Стамбул -->
