--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -95,6 +95,28 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 		    
+		<!--  Зоопарк Пылышенко -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
+                        </a>
+                        <!--<p><span class="fa fa-tags"></span> <span>335грн.</span></p>-->
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
+                        </h5>
+                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Зоопарк Пылышенко -->
+		    
               <!-- Фестиваль воздушных шаров  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
