--- a/packages.html
+++ b/packages.html
@@ -202,6 +202,28 @@
                 </div>
                 <!--  //Львята и лошадки -->
 
+                <!--  Святогорск И Соледар -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Svyatogorsk-and-Soledar.html">
+                            <img src="images/Svyatogorsk-and-Soledar/home-Svyatogorsk-and-Soledar-.jpg" alt="Svyatogorsk-and-Soledar" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>2860грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Донецкая обл.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Svyatogorsk-and-Soledar.html">Святогорск И Соледар</a>
+                        </h5>
+                        <p class="">Круто и необычно!</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>26 - 27 Июня</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Святогорск И Соледар -->
+
                 <!--  Львов   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
@@ -409,28 +431,6 @@
                 </div>
                 <!--  //Харьков  -->
                 
-                <!--  Зоопарк Пылышенко -->
-                <!--<div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
-                        </h5>
-                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>16 Мая</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>-->
-                <!--  //Зоопарк Пылышенко -->
-
                 <!--  Стамбул -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
