--- a/packages.html
+++ b/packages.html
@@ -215,7 +215,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Svyatogorsk-and-Soledar.html">Святогорск И Соледар</a>
                         </h5>
-                        <p class="">Круто и необычно!</p>
+                        <p class="">Там очень Круто и необычно!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>26 - 27 Июня</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
