--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -285,11 +285,11 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                             <h5>25 Июня</h5>
-                                            <p>
-                                                <strong>
+                                            <p><time>
+                                                  <strong>
                                                     22:00
-                                                </strong>
-                                                
+                                                  </strong>
+                                                </time>
                                                 Выезд из Центра Запорожья после минутки позитива.
                                                 <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                                 Едем на комфортабельном транспорте тур.класса (раскладные сидения), 
@@ -302,8 +302,11 @@
                                          <hr>
                                              <h5>26 Июня</h5>
                                             <p>
-                                                <strong>
-                                                    10:30 - 12:00</strong> 
+                                               <time>
+                                                 <strong>
+                                                    10:30 - 12:00
+                                                  </strong> 
+                                               </time>
                                                  Солняные Шахты Соледара. Вот это круто! 
                                                  <img src="/images/Emoji/1f632.png" alt="smile" height="20px">
                                                  Милые Соляные скульптуры подсвеченные разными огоньками. 
