--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Сырная ферма </h4>
+                            <h4> Ферма и Пасека </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
